--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        box-sizing: border-box;
        position: relative;
        overflow: hidden;
-       background-image: url('https://files.catbox.moe/yh1om7.png'); 
+       background-image: url('https://files.catbox.moe/d8j840.jpg'); 
        background-size: cover;
        background-position: center;
      }
