--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       background: linear-gradient(300deg, #000000, #301701, #301701, #efbf04, #301701, #301701, #000000);
       background-size: 240% 240%;
       animation: gradient-animation 8s ease infinite;
-      opacity: 0.75;
-      mix-blend-mode: hard-light;
+      opacity: 0.1;
+      mix-blend-mode: multiply;
       z-index: 1;
       pointer-events: none;
     }
