--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ VERSION:3.0
 FN:Janette Santos
 TITLE:Purchasing Agent (GTF)
 TEL;TYPE=WORK,VOICE:818-897-2079;ext:109
-EMAIL:bakersfield@gracianatortilla.com
+EMAIL:janette@gracianatortilla.com
 ADR:;;12239 Foothill Blvd;Sylmar;CA;91340;United States;;;
 END:VCARD`;
 
