--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <div class="card-content">
       <div class="logo">
         <img
-          src="https://files.catbox.moe/wo9qqy.png"
+          src="./images/Logo.png"
           alt="Graciana Tortilla Factory Logo"
         />
       </div>
